[workspace]
members = [
    "crates/boxkv-core",
    "crates/boxkv-wasm",
    "crates/boxkv-storage",
    "crates/boxkv-common",
    "crates/boxkv-server",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
