[package]
name = "boxkv-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

config = "0.15.19"

[dev-dependencies]
tempfile = { workspace = true }